--- a/source/html/views/staffs-page.html
+++ b/source/html/views/staffs-page.html
@@ -1,3 +1,33 @@
+<!--header.html-->
+<%= _.template(require('../includes/common/header.html').default)({}) %>
+
+<section class="text-w-image-banner">
+  <div class="container">
+    <div class="row">
+      <div class="col-lg-6 col-md-12 col-m-12">
+        <div class="banner-content">
+          <h1 class="h2">
+            <span>Our <b>Faculty</b> </span>
+          </h1>
+          <div class="text-description">
+            <p>
+              At Istituto Marangoni Miami, we offer a transformative academic experience that goes beyond traditional boundaries, allowing students to explore the multifaceted world of fashion and design from diverse perspectives. Our institution is deeply rooted in Italian heritage, infusing every aspect of our academic programs with luxury, credibility, and innovation.We believe in shaping the future generation of fashion with a strong commitment to sustainability. Our academic programs emphasize responsible design, where creativity meets environmental and ethical consciousness. Students learn to create with purpose, making a meaningful impact in the global fashion landscape.
+            </p>
+            <p>
+              Our curriculum is designed to prepare students for the complex dynamics of the fashion industry. Beyond the glamor, we delve into the challenges and opportunities it presents. Our personalized education, guided by industry professionals and partners, equips students with the knowledge, skills, and resilience needed to thrive in this competitive field. At Istituto Marangoni Miami, we believe that fashion has no boundaries. Our academic approach transcends traditional pathways, encouraging students to grow intellectually and creatively, expand their problem-solving capabilities, and become prepared to make a significant impact in the complex and ever-evolving world of fashion and design.
+            </p>
+          </div>
+        </div>
+      </div>
+      <div class="col-lg-6 col-md-12 col-m-12">
+        <div class="banner-image">
+          <img src="./img/banner-image-w-text.png" alt="">
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
+
 <section class="cards-list-section">
   <div class="container">
     <div class="row">
@@ -37,6 +67,46 @@
           <div class="staff-position">Dean of Fashion</div>
         </div>
       </div>
+      <div class="col-lg-3 col-md-6 col-m-12">
+        <div class="staff-card">
+          <div class="staff-image">
+            <img src="./img/staff-image.png" alt="">
+          </div>
+          <a href="#" class="open-modal-dialog staff-name" data-src="modal-staff">Keanan Duffty</a>
+          <div class="staff-position">Dean of Fashion</div>
+        </div>
+      </div>
+      <div class="col-lg-3 col-md-6 col-m-12">
+        <div class="staff-card">
+          <div class="staff-image">
+            <img src="./img/staff-image.png" alt="">
+          </div>
+          <a href="#" class="open-modal-dialog staff-name" data-src="modal-staff">Keanan Duffty</a>
+          <div class="staff-position">Dean of Fashion</div>
+        </div>
+      </div>
+      <div class="col-lg-3 col-md-6 col-m-12">
+        <div class="staff-card">
+          <div class="staff-image">
+            <img src="./img/staff-image.png" alt="">
+          </div>
+          <a href="#" class="open-modal-dialog staff-name" data-src="modal-staff">Keanan Duffty</a>
+          <div class="staff-position">Dean of Fashion</div>
+        </div>
+      </div>
+      <div class="col-lg-3 col-md-6 col-m-12">
+        <div class="staff-card">
+          <div class="staff-image">
+            <img src="./img/staff-image.png" alt="">
+          </div>
+          <a href="#" class="open-modal-dialog staff-name" data-src="modal-staff">Keanan Duffty</a>
+          <div class="staff-position">Dean of Fashion</div>
+        </div>
+      </div>
     </div>
   </div>
 </section>
+
+
+<!--footer.html-->
+<%= _.template(require('../includes/common/footer.html').default)({}) %>
