--- a/source/html/views/staffs-page.html
+++ b/source/html/views/staffs-page.html
@@ -108,5 +108,30 @@
 </section>
 
 
+<div class="modal-dialog modal-dialog-centered modal-staff" style="display: none">
+  <div class="modal-content">
+    <div class="modal-body container-fluid">
+      <div class="modal-staff-wrapper">
+        <div class="modal-staff-column">
+          <div class="staff-card">
+            <div class="staff-image">
+              <img src="./img/staff-image.png" alt="">
+            </div>
+            <a href="#" class="open-modal-dialog staff-name">Keanan Duffty</a>
+            <div class="staff-position">Dean of Fashion</div>
+          </div>
+          <button type="button" class="modal-close d-none d-xl-inline-block" data-dismiss="modal" aria-label="Close"></button>
+        </div>
+        <div class="modal-staff-column">
+          <div class="staff-description">
+            <p>Keanan Duffty serves as the Dean of Fashion at Istituto Marangoni Miami. He is an award-winning British fashion designer and the author of Rebel Rebel: Anti-Style (Rizzoli/Universe, 2009). Duffty earned a Bachelor of Arts degree with 1st Class Honors in fashion from Central Saint Martins, London. In 2007 Duffty became a member of the Council of Fashion Designers of America (CFDA) and his collections have been shown at New York Fashion week from 1998-2010. From 2000-2003 Duffty collaborated with Reebok, Gola and Dr Martens on co-branded collections and has served as Design Director for Gwen Stefani’s L.A.M.B, John Varvatos and Ben Sherman.</p>
+          </div>
+          <a href="#" class="link-red link-red-arrow">read more</a>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
+
 <!--footer.html-->
 <%= _.template(require('../includes/common/footer.html').default)({}) %>
