--- a/source/scss/components/_custom-cards-block.scss
+++ b/source/scss/components/_custom-cards-block.scss
@@ -4,6 +4,7 @@
     margin-bottom: 50px;
   }
 
+
   .custom-list {
 
     .custom-list-item {
@@ -26,6 +27,10 @@
       .custom-item-content {
         max-width: 85%;
         margin-bottom: 50px;
+
+        .tablet-link {
+          display: none;
+        }
       }
 
       .tags {
@@ -101,6 +106,10 @@
         }
       }
 
+      .custom-item-meta-mobile {
+        display: none;
+      }
+
     }
   }
 
@@ -117,6 +126,11 @@
         .custom-item-content {
           margin-bottom: 0;
           max-width: 100%;
+
+          .tablet-link {
+            display: flex;
+            margin-top: 30px;
+          }
         }
 
         .custom-item-col:nth-of-type(1) {
@@ -159,6 +173,12 @@
           .custom-item-meta {
             display: flex;
             margin-bottom: 10px;
+            justify-content: space-between;
+            width: 100%;
+
+            .link-red {
+              display: none;
+            }
           }
           .custom-card-image {
             display: block;
@@ -193,6 +213,70 @@
         flex-wrap: wrap;
 
         .custom-item-title {
+          font-size: 23px;
+          line-height: 28px;
+          margin-bottom: 15px;
+        }
+
+        .custom-item-meta {
+          display: flex;
+          justify-content: space-between;
+          margin-top: 20px;
+
+          .custom-item-date {
+            font-size: 12px;
+            line-height: 14px;
+            text-transform: uppercase;
+          }
+
+          .link-red {
+            order: -1;
+            margin-left: 0;
+          }
+
+          .custom-item-cat {
+            display: none;
+          }
+        }
+
+        .custom-item-content {
+
+          .tablet-link {
+            display: none;
+          }
+        }
+
+        .custom-item-col:nth-of-type(2) {
+          display: none;
+        }
+
+        .custom-item-col:nth-of-type(1) {
+          padding: 0;
+        }
+
+        .block-pc-hidden {
+
+          .custom-card-image {
+            margin-bottom: 20px;
+          }
+
+          .custom-item-meta {
+            display: none;
+          }
+
+          .custom-item-meta-mobile {
+            display: flex;
+            margin-top: 20px;
+
+            .custom-item-cat {
+              display: flex;
+              height: 28px;
+            }
+          }
+
+        }
+
+        .custom-item-title {
           margin-bottom: 10px;
         }
 
@@ -207,6 +291,7 @@
             margin-bottom: 20px;
           }
         }
+
       }
     }
   }
