--- a/source/scss/components/_main-banner.scss
+++ b/source/scss/components/_main-banner.scss
@@ -118,3 +118,53 @@
 
   }
 }
+
+@media (max-width: 600px) {
+  .main-banner {
+
+    .container {
+      padding: 0 24px;
+    }
+
+    .banner-wrapper {
+
+      .btn {
+        left: 20px;
+      }
+    }
+
+    .banner-description {
+      margin-bottom: 26px;
+
+      p {
+        font-size: 13px;
+        font-weight: 400;
+        line-height: 16px;
+      }
+    }
+
+    .h1 {
+      font-size: 51px;
+      font-weight: 250;
+      line-height: 61px;
+      margin-bottom: 35px;
+
+      span {
+
+        strong {
+
+          b {
+            text-align: right;
+            width: 100%;
+            display: block;
+          }
+        }
+
+
+        &:nth-of-type(2) {
+          margin-left: 0;
+        }
+      }
+    }
+  }
+}
