--- a/source/scss/layout/_header.scss
+++ b/source/scss/layout/_header.scss
@@ -440,7 +440,7 @@ header.header-main {
     overflow: visible;
     opacity: 1;
     visibility: visible;
-    pointer-events: auto;
+    pointer-events: initial;
     overflow-y: auto;
   }
 
