--- a/source/scss/components/_accordion-level.scss
+++ b/source/scss/components/_accordion-level.scss
@@ -65,18 +65,22 @@
             border-top: 0;
 
             &:nth-of-type(1) {
-              width: 25%;
+              width: 10%;
               border-right: 1px solid $--color-grey-2;
             }
             &:nth-of-type(2) {
-              width: 75%;
+              width: 90%;
               padding-left: 30px;
             }
           }
 
           tr {
+            td {
+              width: 90%;
+            }
             td:nth-of-type(1) {
               border-left: 0;
+              width: 10%;
             }
             &:last-of-type {
               td {
@@ -266,22 +270,43 @@
           flex-wrap: wrap;
           font-size: 20px;
           line-height: 24px;
+          padding-right: 0;
 
           .accordion-new-header-name {
             margin-left: 0;
             margin-top: 15px;
             text-transform: uppercase;
+            font-size: 20px;
+            line-height: 24px;
+            font-weight: 700;
           }
           .accordion-new-header-status {
             position: absolute;
             top: 26px;
             right: 0;
           }
+          .accordion-new-header-level {
+            font-size: 26px;
+            line-height: 26px;
+          }
         }
 
         .accordion-new-item-content {
 
+          .accordion-content-wrapper {
+            padding-bottom: 0;
+          }
+
           table {
+
+            td {
+              .td-column-title {
+                margin-bottom: 20px;
+              }
+              .td-column-description p {
+                margin-bottom: 20px;
+              }
+            }
 
             .td-column-bottom {
               flex-wrap: wrap;
@@ -292,9 +317,7 @@
             }
 
             td:nth-of-type(2) {
-              padding-left: 20px;
-              padding-right: 20px;
-              padding-bottom: 20px;
+              padding: 20px 20px 27px;
             }
 
             .td-column-title {
@@ -313,14 +336,42 @@
               }
             }
 
+            td {
+              width: 70%;
+
+              &:nth-of-type(1) {
+                width: 30%;
+              }
+            }
+
             th {
               font-size: 12px;
               line-height: 14px;
               padding: 7px 0 26px;
+              width: 70%;
+
+              &:nth-of-type(1) {
+                width: 30%;
+              }
             }
           }
         }
       }
+
+      .accordion-new-item.active {
+        border-bottom: 1px solid $--color-black;
+        .table-accordion-item.show {
+
+          .td-column-bottom {
+            justify-content: flex-start;
+          }
+
+          td:nth-of-type(2) {
+            padding: 37px 20px 20px;
+          }
+        }
+      }
+
     }
 
   }
