--- a/source/scss/components/_apply-section.scss
+++ b/source/scss/components/_apply-section.scss
@@ -79,6 +79,11 @@
   .apply-section {
     padding: 40px 0;
 
+    .widgettitle {
+      font-size: 50px;
+      line-height: 50px;
+    }
+
     .textwidget {
       padding-top: 30px;
       margin-bottom: 30px;
