--- a/source/scss/components/_programs-section.scss
+++ b/source/scss/components/_programs-section.scss
@@ -234,18 +234,16 @@
       }
 
       .programs-content-wrapper {
-        min-height: 636px;
+        min-height: initial;
 
         .program-tab-content {
 
           &:nth-of-type(1) .program-content-right {
-            margin-top: 0;
+            margin-top: -170px;
           }
 
           .program-content-right {
-            position: absolute;
-            right: 42px;
-            top: 0;
+            margin-top: -170px;
             width: calc(50% - 42px);
 
             img {
