--- a/source/scss/components/_testimonials.scss
+++ b/source/scss/components/_testimonials.scss
@@ -27,3 +27,25 @@
     }
   }
 }
+
+@media (max-width: 600px) {
+  .testimonials {
+
+    .description {
+      max-width: 100%;
+      margin-bottom: 64px;
+      top: 20%;
+      z-index: 3;
+
+      p {
+        font-size: 16px;
+        line-height: 19px;
+      }
+    }
+
+    .testimonial-content {
+      padding: 30px 0 0;
+    }
+
+  }
+}
