--- a/source/html/views/staffs-page.html
+++ b/source/html/views/staffs-page.html
@@ -30,7 +30,9 @@
 
 <section class="cards-list-section">
   <div class="container">
-    <div class="h2">Fashion <strong>Design</strong></div>
+    <div class="title-wrapper">
+      <div class="h2">Fashion <strong>Design</strong></div>
+    </div>
     <div class="row">
       <div class="col-lg-3 col-md-6 col-m-12">
         <div class="staff-card">
@@ -110,7 +112,9 @@
 
 <section class="cards-list-section">
   <div class="container">
-    <div class="h2">Fashion <strong>Design</strong></div>
+    <div class="title-wrapper">
+      <div class="h2">Fashion <strong>Design</strong></div>
+    </div>
     <div class="row">
       <div class="col-lg-3 col-md-6 col-m-12">
         <div class="staff-card">
@@ -190,7 +194,9 @@
 
 <section class="cards-list-section">
   <div class="container">
-    <div class="h2">Fashion <strong>Design</strong></div>
+    <div class="title-wrapper">
+      <div class="h2">Fashion <strong>Design</strong></div>
+    </div>
     <div class="row">
       <div class="col-lg-3 col-md-6 col-m-12">
         <div class="staff-card">
@@ -270,7 +276,9 @@
 
 <section class="cards-list-section">
   <div class="container">
-    <div class="h2">Fashion <strong>Design</strong></div>
+    <div class="title-wrapper">
+      <div class="h2">Fashion <strong>Design</strong></div>
+    </div>
     <div class="row">
       <div class="col-lg-3 col-md-6 col-m-12">
         <div class="staff-card">
