--- a/source/scss/components/_custom-cards-block.scss
+++ b/source/scss/components/_custom-cards-block.scss
@@ -58,6 +58,11 @@
         line-height: 34px;
         color: $--color-black;
         margin-bottom: 15px;
+        transition: 0.3s;
+      }
+
+      a.custom-item-title:hover {
+        color: $--color-red;
       }
 
       .custom-item-meta {
@@ -180,6 +185,11 @@
               display: none;
             }
           }
+
+          .custom-item-meta-mobile {
+            display: none;
+          }
+
           .custom-card-image {
             display: block;
             margin-bottom: 30px;
@@ -211,6 +221,7 @@
       .custom-list-item {
         padding: 30px 20px;
         flex-wrap: wrap;
+        margin-bottom: 20px;
 
         .custom-item-title {
           font-size: 23px;
@@ -244,10 +255,6 @@
           .tablet-link {
             display: none;
           }
-        }
-
-        .custom-item-col:nth-of-type(2) {
-          display: none;
         }
 
         .custom-item-col:nth-of-type(1) {
