--- a/source/scss/components/_program-cards-block.scss
+++ b/source/scss/components/_program-cards-block.scss
@@ -66,6 +66,7 @@
               font-weight: 500;
               line-height: 22px;
               color: $--color-black;
+              text-decoration: none;
               span {
                 color: $--color-red;
               }
