--- a/source/scss/components/_programs-section.scss
+++ b/source/scss/components/_programs-section.scss
@@ -15,6 +15,8 @@
 
   .tabs-block {
     width: 100%;
+    position: relative;
+    min-height: 500px;
 
     .programs-content-wrapper {
       width: 100%;
@@ -59,11 +61,15 @@
             height: 370px;
           }
 
-          p {
+          p, a {
             color: $--color-black;
             font-size: 16px;
             font-weight: 300;
             line-height: 19px;
+          }
+
+          a:hover {
+            color: $--color-red;
           }
 
         }
@@ -111,7 +117,7 @@
     .program-tabs {
       position: absolute;
       left: calc(40% + 40px);
-      top: 170px;
+      top: 0;
       width: 21%;
 
       .pc-hidden-content {
@@ -184,7 +190,6 @@
           transform: rotate(-45deg);
           margin-right: 10px;
           transition: 0.3s;
-          margin-top: 3px;
         }
 
         &:last-of-type {
@@ -197,7 +202,7 @@
         align-items: flex-start;
 
         .program-tab-title {
-          color: $--color-red-focus;
+          color: $--color-red;
         }
 
         .program-tab-description {
@@ -218,7 +223,148 @@
 
 }
 
+.programs-section-tablet {
+  display: none;
+}
+
+@media (min-width: 1025px) {
+  .single-program .programs-section .tabs-block {
+    min-height: 600px;
+  }
+}
+
+
 @media (max-width: 1024px) {
+
+  .programs-section-pc {
+    display: none;
+  }
+
+  .programs-section-tablet {
+    display: block;
+
+    .h2-mobile {
+      display: none;
+    }
+
+    .h2 {
+      max-width: 100%;
+      margin-bottom: 90px;
+    }
+
+    .tabs-block-tablet {
+      display: flex;
+
+      .program-tab-content-tablet {
+        transition: 0.3s;
+        opacity: 1;
+        width: initial;
+        height: initial;
+        visibility: visible;
+        overflow: visible;
+      }
+
+      .program-content-tablet-right {
+
+        img {
+          height: 756px;
+          width: 100%;
+          object-fit: cover;
+        }
+      }
+
+      .program-tab-content-tablet.hidden {
+        opacity: 0;
+        width: 0;
+        height: 0;
+        visibility: hidden;
+        overflow: hidden;
+        transition: 0.3s;
+      }
+
+      .tab-nav-tablet {
+        width: 50%;
+        padding-right: 12px;
+
+        .link-red {
+          margin-top: 50px;
+        }
+
+        .program-tab-title {
+          font-size: 20px;
+          font-weight: 700;
+          line-height: 24px;
+          color: $--color-black;
+          text-transform: uppercase;
+          margin-bottom: 10px;
+          display: flex;
+          align-items: center;
+
+          &:before {
+            content: "";
+            display: block;
+            border: solid $--color-black;
+            border-width: 0 2px 2px 0;
+            padding: 2px;
+            transform: rotate(-45deg);
+            margin-right: 10px;
+            transition: .3s;
+            margin-top: 3px;
+          }
+
+          &:last-of-type {
+            margin-bottom: 0;
+          }
+        }
+
+
+        .program-tab-tablet {
+
+          .program-tab-description, .program-tab-content-tablet {
+            opacity: 0;
+            width: 0;
+            height: 0;
+            overflow: hidden;
+            visibility: hidden;
+            transition: 0.3s;
+          }
+        }
+
+        .program-tab-tablet.active {
+          .program-tab-title {
+            color: $--color-red;
+
+            &:before {
+              opacity: 0;
+              visibility: hidden;
+              width: 0;
+              height: 0;
+              margin-right: 0;
+              padding: 0;
+            }
+          }
+        }
+
+        .program-tab-tablet.active {
+
+          .program-tab-description, .program-tab-content-tablet {
+            opacity: 1;
+            width: initial;
+            height: initial;
+            overflow: visible;
+            visibility: visible;
+          }
+        }
+
+
+      }
+      .programs-content-wrapper-tablet {
+        width: 50%;
+        padding-left: 12px;
+      }
+    }
+  }
+
   .programs-section {
 
     .tabs-block {
@@ -255,6 +401,60 @@
           }
         }
       }
+    }
+  }
+}
+
+@media (max-width: 600px) {
+
+  .programs-section-tablet {
+
+    p {
+      font-size: 16px;
+      line-height: 19px;
+    }
+
+    .h2 {
+      margin-bottom: 20px;
+    }
+
+    .h2-tablet {
+      display: none;
+    }
+
+    .h2-mobile {
+      display: block;
+    }
+
+    .tabs-block-tablet {
+      flex-wrap: wrap;
+
+      .program-content-tablet-right img {
+        height: 220px;
+      }
+
+      .tab-nav-tablet {
+        width: 100%;
+        padding-right: 0;
+
+        .link-red {
+          margin-top: 30px;
+          border: 1px solid $--color-black;
+          height: 48px;
+          justify-content: center;
+          align-items: center;
+          border-radius: 60px;
+        }
+
+      }
+
+      .programs-content-wrapper-tablet {
+        width: 100%;
+        padding-left: 0;
+        order: -1;
+        margin-bottom: 30px;
+      }
+
     }
   }
 }
