--- a/source/scss/layout/_single-staff.scss
+++ b/source/scss/layout/_single-staff.scss
@@ -1,6 +1,10 @@
 .single-staff-section {
   margin: 30px 0 200px;
 
+  .staff-content-tablet {
+    display: none;
+  }
+
   .staff-name {
     font-size: 60px;
     font-weight: 250;
@@ -31,4 +35,69 @@
     }
   }
 
+}
+
+@media (max-width: 1024px) {
+  .single-staff-section {
+    margin-bottom: 125px;
+
+    .text-description {
+      max-width: 100%;
+    }
+
+    [class*=col-] {
+      padding: 0 12px;
+    }
+
+    .col-md-6:nth-of-type(2) {
+      order: -1;
+    }
+
+    .row {
+      margin: 0 -12px;
+      width: calc(100% + 24px);
+    }
+
+    .staff-content-pc {
+      display: none;
+    }
+
+    .staff-content-tablet {
+      display: block;
+    }
+
+    .staff-name {
+      margin-bottom: 0;
+    }
+
+    .staff-image  {
+
+      img {
+        height: 350px;
+      }
+    }
+  }
+}
+
+@media (max-width: 600px) {
+  .single-staff-section {
+
+    .staff-name {
+      font-size: 37px;
+      line-height: 37px;
+      margin-bottom: 10px;
+    }
+
+    .staff-image {
+      margin-bottom: 20px;
+    }
+
+    .staff-position {
+      font-size: 16px;
+      line-height: 19px;
+      text-transform: uppercase;
+      margin-bottom: 20px;
+    }
+
+  }
 }
