--- a/source/scss/base/_typography.scss
+++ b/source/scss/base/_typography.scss
@@ -16,13 +16,13 @@ h1, .h1 {
 }
 
 a.admin-edit {
-  color: $--color-black;
-  display: flex;
+  color: $--color-red;
   width: fit-content;
-  margin-left: 10px;
+  display: inline-block;
+  margin: 10px 0;
 
   &:hover {
-    color: $--color-red;
+    color: $--color-black;
   }
 }
 
@@ -189,10 +189,22 @@ a {
   }
 }
 
+@media (max-width: 1024px) {
+  h2, .h2 {
+    font-size: 50px;
+    line-height: 50px;
+  }
+}
+
 @media (max-width: 600px) {
   h2, .h2 {
     font-size: 40px;
     line-height: 40px;
+
+    span {
+      display: block;
+      width: 100%;
+    }
   }
   .title-wrapper {
     margin-bottom: 30px;
