--- a/source/scss/components/_apply-section.scss
+++ b/source/scss/components/_apply-section.scss
@@ -1,6 +1,7 @@
 .apply-section {
   background-color: $--color-red;
   padding: 66px 0;
+  margin: 150px 0;
 
   .widget {
     display: flex;
@@ -25,10 +26,12 @@
   }
 
   .textwidget {
-    padding-top: 18px;
+    padding: 18px 0 0 0!important;
     margin-bottom: 30px;
     display: inline-block;
     width: 50%;
+    white-space: initial;
+
 
     p {
       color: $--color-white;
@@ -39,6 +42,7 @@
 
 @media (max-width: 1024px) {
   .apply-section  {
+    margin: 100px 0;
 
     .widget {
       flex-wrap: wrap;
@@ -59,7 +63,7 @@
 
     .textwidget {
       width: 100%;
-      padding-top: 40px;
+      padding: 40px 0 0 0!important;
       margin-bottom: 26px;
 
       p {
@@ -78,6 +82,7 @@
 @media (max-width: 600px) {
   .apply-section {
     padding: 40px 0;
+    margin: 80px 0;
 
     .widgettitle {
       font-size: 50px;
@@ -85,7 +90,7 @@
     }
 
     .textwidget {
-      padding-top: 30px;
+      padding: 30px 0 0 0!important;
       margin-bottom: 30px;
 
       p {
