--- a/source/scss/components/_breadcrumbs.scss
+++ b/source/scss/components/_breadcrumbs.scss
@@ -1,5 +1,5 @@
 .breadcrumbs-section {
-  margin: 20px 0 30px;
+  margin: 10px 0 30px;
 
   a {
 
@@ -12,11 +12,29 @@
   }
   .breadcrumb_last {
     color: $--color-black;
+    position: relative;
+
+    &:before {
+      content: "";
+      background-color: #c80d3a;
+      position: absolute;
+      left: -16px;
+      top: 6px;
+      display: block;
+      width: 6px;
+      height: 6px;
+      border-radius: 50%;
+    }
+  }
+
+  strong {
+    font-weight: 300;
   }
 
   span span {
     margin-left: 5px;
     display: inline-block;
+    margin-right: 5px;
 
     &:first-of-type {
       margin-left: 0;
