--- a/source/scss/components/_filters-block.scss
+++ b/source/scss/components/_filters-block.scss
@@ -92,3 +92,50 @@
     }
   }
 }
+
+@media (max-width: 700px) {
+  .filters-section  {
+    margin-bottom: 40px;
+
+    .title-wrapper {
+      align-items: center;
+    }
+
+    .filters-block {
+      flex-wrap: wrap;
+
+      .category-title {
+        margin-bottom: 20px;
+      }
+
+      .filters-wrapper {
+        flex-wrap: wrap;
+
+        .filter {
+          margin-bottom: 10px;
+        }
+      }
+    }
+  }
+}
+
+@media (max-width: 600px) {
+  .filters-section {
+    .title-wrapper {
+      flex-wrap: wrap;
+
+      .filter-title {
+        font-size: 23px;
+        line-height: 28px;
+      }
+
+      input[type=search] {
+        width: 100%;
+      }
+    }
+    .search-wrapper {
+      width: 100%;
+      margin-top: 20px;
+    }
+  }
+}
