--- a/source/scss/components/_popup.scss
+++ b/source/scss/components/_popup.scss
@@ -12,7 +12,8 @@
   justify-content: center;
   align-items: center;
   visibility: hidden;
-  transition: opacity .5s ease-in-out
+  transition: opacity .5s ease-in-out;
+  overflow-y: auto;
 }
 
 .modal-open {
