--- a/source/scss/components/_sliders.scss
+++ b/source/scss/components/_sliders.scss
@@ -2,6 +2,8 @@
   max-width: 100%;
   position: relative;
   overflow: hidden;
+  margin: 165px 0 170px;
+  padding-top: 5px;
 }
 
 .slider-wrapper {
@@ -23,6 +25,7 @@
 }
 
 .students-work-slider {
+  height: 567px;
 
   .btn {
     display: none;
@@ -114,6 +117,14 @@
       }
     }
 
+  }
+}
+
+.single-staff-slider {
+  position: initial;
+
+  .staff-card .staff-image img {
+    filter: grayscale(0);
   }
 }
 
@@ -220,13 +231,18 @@
 
 
 
-
-
-
-
 @media (max-width: 1024px) {
+
+  .section-with-slider {
+    margin: 95px 0 100px;
+  }
+
   .swiper-slide {
     opacity: 1;
+  }
+
+  .single-staff-slider {
+    overflow: hidden;
   }
 
   .events-section-slider, .testimonials-slider {
@@ -301,6 +317,16 @@
 }
 
 @media (max-width: 600px) {
+
+  .students-work-slider {
+    height: initial;
+
+    .work-slide-wrapper {
+      width: 100%;
+    }
+  }
+
+
   .testimonials-slider {
     padding-bottom: 90px;
 
@@ -320,5 +346,8 @@
         }
       }
     }
+  }
+  .single-staff-slider {
+    overflow: initial;
   }
 }
