--- a/source/scss/components/_staff-section.scss
+++ b/source/scss/components/_staff-section.scss
@@ -1,30 +1,206 @@
 .staff-section-new {
+  position: relative;
+  overflow: hidden;
+
+  .title-wrapper {
+    margin-bottom: 30px;
+  }
+
+  .text-description {
+    margin-bottom: 30px;
+  }
+
+  .col-lg-3 {
+    margin-bottom: 40px;
+  }
+
+  .swiper-button-prev, .swiper-button-next {
+    top: 50%;
+  }
+
+  .swiper-button-prev {
+    left: 12px;
+  }
+
+  .swiper-button-next {
+    right: 12px;
+  }
+
+  .staff-slide-wrapper {
+    display: flex;
+    width: calc(100% + 40px);
+    margin: 0 -20px;
+    .staff-column {
+      padding: 0 20px;
+      max-width: 25%;
+      width: 100%;
+    }
+  }
+
+
 
   .h2 {
     max-width: 30%;
   }
+
+  .staff-column:nth-of-type(4) {
+
+    .staff-card .staff-popup {
+      left: unset;
+      right: 100%;
+      border-width: 1px 0 1px 1px;
+    }
+  }
+
+  .col-lg-3:nth-of-type(4) {
+
+    .staff-card .staff-popup {
+      left: unset;
+      right: 100%;
+      border-width: 1px 0 1px 1px;
+    }
+  }
+
+}
+
+
+.staff-slider {
+  .staff-card .staff-image img {
+    filter: grayscale(0);
+  }
+}
+
+.staff-section-new-pc {
+  .container {
+    position: relative;
+  }
+  .slider-wrapper {
+    position: initial;
+    overflow: hidden;
+  }
+}
+
+.staff-section-new-tablet {
+  display: none;
+  .swiper-slide {
+    width: 100% !important;
+  }
+}
+
+.staff-section-new-mobile {
+  display: none;
 }
 
 @media (max-width: 1024px) {
+
   .staff-section-new {
+
+    .col-lg-3 {
+      margin-bottom: 24px;
+    }
+  }
+
+  .staff-section-new-pc {
+    display: none;
+  }
+
+  .staff-section-new-tablet {
+    display: block;
+
+
+    .swiper-slide {
+      opacity: 0;
+    }
+
+    .swiper-slide-visible {
+      opacity: 1;
+    }
+
+    .staff-slide-wrapper {
+      margin: 0 -12px;
+      width: calc(100% + 24px);
+
+      .staff-column {
+        max-width: 33.33%;
+        padding: 0 12px;
+      }
+    }
+  }
+
+  .staff-section-new {
+
+    .swiper-button-prev, .swiper-button-next {
+      display: none;
+    }
 
     .h2 {
       max-width: 50%;
     }
+
+
+    .col-lg-3:nth-of-type(3) .staff-card .staff-popup {
+      left: unset;
+      right: 100%;
+      border-width: 1px 0 1px 1px;
+    }
+
+    .staff-column:nth-of-type(3) .staff-card .staff-popup {
+      left: unset;
+      right: 100%;
+      border-width: 1px 0 1px 1px;
+    }
+
+
+    .staff-column:nth-of-type(4) {
+
+      .staff-card .staff-popup {
+        left: 100%;
+        right: unset;
+        border-width: 1px 1px 1px 0;
+      }
+    }
+
+    .col-lg-3:nth-of-type(4) {
+
+      .staff-card .staff-popup {
+        left: 100%;
+        right: unset;
+        border-width: 1px 1px 1px 0;
+      }
+    }
+
   }
+
 }
 
 @media (max-width: 600px) {
+
+  .staff-section-new-tablet {
+    display: none;
+  }
+
+  .staff-section-new-mobile {
+    display: block;
+    max-width: 100%;
+    position: relative;
+    overflow-y: visible;
+    overflow-x: clip;
+
+    .staff-slide-wrapper {
+      margin: 0;
+      width: 100%;
+      .staff-column {
+        padding: 0;
+        max-width: 100%;
+      }
+    }
+  }
+
   .staff-section-new {
 
-    .title-wrapper {
-
-      .btn {
-        position: absolute;
-        top: 70px;
-        right: 24px;
-        z-index: 3;
-      }
+    .pc-hidden-btn .btn {
+      right: 24px;
+      top: 65px;
     }
 
     .h2 {
