--- a/source/scss/components/_table-section.scss
+++ b/source/scss/components/_table-section.scss
@@ -1,5 +1,9 @@
 .table-section {
 
+  .table-wrapper-mobile {
+    display: none;
+  }
+
   .title-wrapper {
     align-items: flex-end;
     margin-bottom: 65px;
@@ -11,6 +15,10 @@
     .link-red {
       min-width: 200px;
     }
+  }
+
+  .table-wrapper table tr td:nth-of-type(1){
+    text-transform: uppercase;
   }
 
   .text-description {
@@ -40,6 +48,10 @@
       overflow-y: auto;
       margin-left: 42px;
 
+      table {
+        min-width: 1500px;
+      }
+
       &::-webkit-scrollbar {
         width: 10px;
         height: 10px;
@@ -67,6 +79,110 @@
       .link-red {
         display: none;
       }
+    }
+  }
+}
+
+
+@media (max-width: 600px) {
+  .table-section {
+
+    .h2 {
+      font-size: 30px;
+      line-height: 30px;
+    }
+
+    .text-description {
+      max-width: 100%;
+      padding: 0;
+    }
+
+    .disclaimer {
+      margin: 0;
+    }
+
+    .title-wrapper {
+      padding: 0;
+      margin-bottom: 30px;
+    }
+
+    .container {
+      padding: 0 24px;
+    }
+
+    .table-wrapper-mobile {
+      display: block;
+      padding: 0;
+      margin-left: 0;
+
+      table {
+
+        tr {
+
+          &:last-of-type {
+
+            th {
+              border-bottom: 0;
+            }
+
+            td {
+              font-weight: 700!important;
+            }
+          }
+
+          td {
+
+            &:last-of-type {
+              font-weight: 400;
+            }
+
+            &:nth-of-type(1) {
+              text-align: center;
+              font-weight: 400;
+            }
+          }
+
+          &:first-of-type {
+
+            td, th {
+              padding-top: 0;
+              vertical-align: baseline;
+              border-top: 0;
+            }
+          }
+        }
+
+        th {
+          font-size: 12px;
+          font-weight: 700;
+          line-height: 14px;
+          color: $--color-black;
+          text-transform: uppercase;
+          text-align: start;
+          border: 1px solid #B2B3B7;
+          border-left: 0;
+          padding: 10px;
+          width: 40%;
+        }
+
+        td {
+          font-size: 13px;
+          font-weight: 400;
+          line-height: 16px;
+          text-align: center;
+          border: 1px solid #B2B3B7;
+          padding: 10px;
+
+          &:last-of-type {
+            border-right: 0;
+          }
+        }
+
+      }
+    }
+
+    .table-wrapper-pc {
+      display: none;
     }
   }
 }
