--- a/source/scss/components/_text-block-w-image.scss
+++ b/source/scss/components/_text-block-w-image.scss
@@ -1,4 +1,46 @@
-.text-section-w-image {
+section.main-text-section-w-image {
+  margin-top: 30px;
+}
+
+section.text-section-w-image {
+
+  ul {
+    list-style: disc;
+    padding-left: 20px;
+  }
+
+  .banner-stats {
+    display: flex;
+    width: calc(100% + 80px);
+    margin: 0 -40px;
+    margin-top: auto;
+
+    .stat-item-col {
+      width: 33.33%;
+      padding: 0 40px;
+    }
+
+    .stat-item {
+
+      .stat-item-title {
+        font-size: 40px;
+        font-weight: 700;
+        line-height: 40px;
+        color: $--color-red;
+        margin-bottom: 10px;
+      }
+
+      .stat-item-desc {
+
+        p {
+          font-size: 13px;
+          font-weight: 700;
+          line-height: 16px;
+          text-transform: uppercase;
+        }
+      }
+    }
+  }
 
   .h2 {
     margin-bottom: 30px;
@@ -6,6 +48,10 @@
 
   .text-description {
     margin-bottom: 100px;
+  }
+
+  .image-wrapper-tablet {
+    display: none;
   }
 
   .image-wrapper {
@@ -17,4 +63,142 @@
     }
   }
 
+}
+
+@media (max-width: 1024px) {
+
+  section.text-section-w-image {
+    .image-wrapper-tablet {
+      display: none;
+    }
+
+    .text-description {
+      margin-bottom: 0;
+    }
+
+    .col-md-6:nth-of-type(2) {
+      order: -1;
+    }
+
+    .image-wrapper {
+
+      img {
+        height: 600px;
+      }
+    }
+  }
+
+  section.main-text-section-w-image {
+    margin-top: 14px;
+
+    .image-wrapper-tablet {
+      display: block;
+    }
+
+    .image-wrapper-pc {
+      display: none;
+    }
+
+    .col-md-6 {
+      width: 100%;
+    }
+
+    .image-wrapper-pc {
+      display: none;
+    }
+
+    .text-description {
+      margin-bottom: 0;
+    }
+
+    .banner-stats .stat-item .stat-item-desc p {
+      max-width: 90%;
+    }
+
+    .image-wrapper-tablet {
+      display: block;
+      margin-bottom: 30px;
+
+      img {
+        height: 350px;
+      }
+    }
+  }
+}
+
+@media (min-width: 601px) and (max-width: 800px) {
+  section.text-section-w-image .h2 {
+    font-size: 40px;
+    line-height: 40px;
+  }
+}
+
+@media (max-width: 600px) {
+
+  section.text-section-w-image {
+    max-width: 100%;
+    overflow: hidden;
+
+    .h2 {
+      margin-bottom: 20px;
+    }
+
+    .image-wrapper-pc {
+      display: none;
+    }
+
+    .image-wrapper-tablet {
+      display: block;
+      margin-bottom: 24px;
+
+      img {
+        height: 233px;
+      }
+    }
+  }
+
+  section.main-text-section-w-image  {
+    margin-bottom: 80px;
+    margin-top: 20px;
+
+   .image-wrapper-tablet img {
+     height: 350px;
+   }
+
+    .banner-stats {
+      flex-wrap: wrap;
+
+      .stat-item-col {
+        width: 100%;
+        margin-bottom: 24px;
+
+        &:last-of-type {
+          margin-bottom: 0;
+        }
+
+        .stat-item {
+          display: flex;
+          align-items: center;
+          width: 100%;
+
+          .stat-item-title {
+            width: 40%;
+            margin-bottom: 0;
+          }
+          .stat-item-desc {
+            width: 60%;
+
+            p {
+              margin-bottom: 0;
+              max-width: 95%;
+            }
+          }
+        }
+      }
+    }
+
+    .h2 {
+      margin-bottom: 20px;
+    }
+  }
 }
