--- a/source/scss/components/_text-w-image-banner.scss
+++ b/source/scss/components/_text-w-image-banner.scss
@@ -1,4 +1,6 @@
 .text-w-image-banner {
+  margin-top: 20px;
+  margin-bottom: 80px;
 
   .h2 {
     margin-bottom: 20px;
@@ -22,36 +24,19 @@
   .banner-description {
     margin-bottom: 20px;
   }
+}
 
-  .banner-stats {
-    display: flex;
-    width: calc(100% + 80px);
-    margin: 0 -40px;
-    margin-top: auto;
+@media (max-width: 1024px) {
+  .text-w-image-banner {
 
-    .stat-item-col {
-      width: 33.33%;
-      padding: 0 40px;
+    .banner-image {
+      margin-bottom: 30px;
     }
 
-    .stat-item {
+    .col-md-12 {
 
-      .stat-item-title {
-        font-size: 40px;
-        font-weight: 700;
-        line-height: 40px;
-        color: $--color-red;
-        margin-bottom: 10px;
-      }
-
-      .stat-item-desc {
-
-        p {
-          font-size: 13px;
-          font-weight: 700;
-          line-height: 16px;
-          text-transform: uppercase;
-        }
+      &:nth-of-type(2) {
+        order: -1;
       }
     }
   }
