--- a/source/scss/layout/_article.scss
+++ b/source/scss/layout/_article.scss
@@ -1,4 +1,12 @@
 .article-section {
+  margin-top: 100px;
+
+
+  h2 {
+    font-size: 40px;
+    line-height: 40px;
+    margin: 20px 0 20px;
+  }
 
   .article-left {
 
@@ -37,6 +45,11 @@
   p {
     font-size: 16px;
     line-height: 19px;
+
+    strong {
+      margin-bottom: 15px;
+    }
+
   }
 
   .article-share {
@@ -89,4 +102,29 @@
     }
   }
 
+}
+
+@media (max-width: 600px) {
+  .article-section {
+
+    .article-share {
+
+      .article-share-links {
+        flex-wrap: wrap;
+        justify-content: flex-start;
+        margin: 0 -12px;
+        width: calc(100% + 24px);
+
+        .share-link {
+          padding: 0 12px;
+          margin-bottom: 24px;
+
+          .ico-wrapper {
+            width: 60px;
+            height: 60px;
+          }
+        }
+      }
+    }
+  }
 }
