--- a/source/scss/layout/_footer.scss
+++ b/source/scss/layout/_footer.scss
@@ -26,7 +26,10 @@ footer.footer-main {
 
     li {
       margin-bottom: 10px;
-      display: flex;
+      font-size: 16px;
+      font-weight: 300;
+      line-height: 19px;
+      color: $--color-white;
 
       &:last-of-type {
         margin-bottom: 0;
@@ -113,7 +116,7 @@ footer.footer-main {
     &:before {
       content: "";
       display: block;
-      width: 30%;
+      width: 24%;
       height: calc( 100% + 36px);
       background-color: $--color-black-2;
       position: absolute;
@@ -174,12 +177,35 @@ footer.footer-main {
       line-height: 19px;
       color: $--color-white;
       margin-bottom: 20px;
+      display: flex;
+
+      &:hover {
+
+        a {
+          color: $--color-red;
+        }
+      }
+
+      &:before {
+        content: "";
+        display: block;
+        width: 16px;
+        height: 16px;
+        min-width: 16px;
+        background-size: 16px;
+        background-repeat: no-repeat;
+        background-position: center;
+        margin-right: 10px;
+        margin-top: 1px;
+        transition: 0.3s;
+      }
 
       a {
         font-size: 16px;
         font-weight: 300;
         line-height: 19px;
         color: $--color-white;
+        transition: 0.3s;
       }
 
       &:last-child {
@@ -188,12 +214,47 @@ footer.footer-main {
     }
     .footer-address {
 
+      a {
+        line-height: 24px;
+      }
+
+      &:before {
+        background-image: url(../img/icons/footer-location-white.svg);
+        margin-top: 4px;
+      }
+
+      &:hover {
+
+        &:before {
+          background-image: url(../img/icons/footer-location-hover.svg);
+        }
+      }
     }
     .footer-mail {
 
+      &:before {
+        background-image: url(../img/icons/footer-mail-white.svg);
+      }
+
+      &:hover {
+
+        &:before {
+          background-image: url(../img/icons/footer-mail-hover.svg);
+        }
+      }
     }
     .footer-phone {
 
+      &:before {
+        background-image: url(../img/icons/footer-call-white.svg);
+      }
+
+      &:hover {
+
+        &:before {
+          background-image: url(../img/icons/footer-call-hover.svg);
+        }
+      }
     }
   }
 
@@ -243,23 +304,243 @@ footer.footer-main {
 
 }
 
-@media (max-width: 1700px) {
+@media (min-width: 1600px) {
+  footer.footer-main .container-fluid:before {
+    width: 28%;
+  }
+}
+
+@media (min-width: 1920px) {
+  footer.footer-main .container-fluid:before {
+    width: 30%;
+  }
+}
+
+@media (min-width: 2100px) {
+  footer.footer-main .container-fluid:before {
+    width: 32%;
+  }
+}
+
+
+@media (max-width: 1260px) {
+  footer.footer-main .container-fluid:before {
+    width: 25%;
+  }
+}
+
+@media (max-width: 900px) {
   footer.footer-main .container-fluid:before {
     width: 26%;
   }
 }
 
-@media (max-width: 600px) {
+
+@media (max-width: 1024px) {
   footer.footer-main {
+    padding-bottom: 55px;
+
+    .container-fluid:before {
+      top: 31px;
+      height: calc(100% + 24px);
+    }
+
+    .footer-menu-wrapper {
+      margin-top: 30px;
+      padding-top: 33px;
+
+      .col-md-3 {
+
+        &:nth-of-type(2) {
+          width: 20%;
+        }
+
+        &:nth-of-type(3) {
+          width: 30%;
+        }
+
+      }
+    }
+
+    .footer-center {
+
+      &:after {
+        margin-top: 30px;
+      }
+    }
+
+    .footer-title {
+      margin-bottom: 10px;
+
+      .footer-logo-title {
+        font-size: 44px;
+        line-height: 44px;
+      }
+    }
 
     .footer-banner {
       padding: 54px 40px 30px;
+      margin-bottom: 80px;
     }
 
     .footer-banner-links {
 
       li {
         padding: 28px 48px;
+
+        &:last-of-type {
+          padding-right: 0;
+        }
+      }
+    }
+  }
+}
+
+
+@media (max-width: 600px) {
+  footer.footer-main {
+    margin-top: 224px;
+    padding-bottom: 0;
+
+    .row {
+      width: 100%;
+      margin-right: 0;
+      margin-left: 0;
+    }
+
+    [class*=col-] {
+      padding: 0;
+    }
+
+    .subtitle {
+      font-size: 16px;
+      line-height: 19px;
+      margin-bottom: 15px;
+    }
+
+    ul {
+
+      li {
+
+        a {
+          font-size: 15px;
+          line-height: 18px;
+        }
+      }
+    }
+
+    .container-fluid:before {
+      display: none;
+    }
+
+    .footer-center:after {
+      margin-top: 20px;
+    }
+
+    ul {
+      margin-bottom: 20px;
+    }
+
+    .footer-menu-wrapper {
+      margin-top: 0;
+      padding-top: 40px;
+
+      .col-m-12 {
+
+        &:nth-of-type(2), &:nth-of-type(3) {
+          width: 100%;
+        }
+
+        &:nth-of-type(2) {
+          ul {
+            display: flex;
+            flex-wrap: wrap;
+            max-width: 80%;
+
+            li {
+              width: 50%;
+            }
+          }
+        }
+
+        &:nth-of-type(3) {
+          .subtitle {
+            margin-bottom: 10px;
+          }
+        }
+
+        &:nth-of-type(1) {
+          order: 4;
+          margin-top: 13px;
+          position: relative;
+          padding-top: 24px;
+          padding-bottom: 32px;
+
+          &:before {
+            content: "";
+            position: absolute;
+            top: 0;
+            background-color: #2A2627;
+            width: calc(100% + 48px);
+            left: -24px;
+            height: 100%;
+            display: block;
+          }
+        }
+      }
+    }
+
+    .footer-title {
+      margin-bottom: 24px;
+      width: 100%;
+
+      .footer-logo-title {
+        font-size: 30px;
+        line-height: 30px;
+        max-width: 325px;
+      }
+    }
+    .footer-banner {
+      padding: 0 15px 30px 24px;
+      margin-bottom: 44px;
+      margin-top: -107px;
+
+      .h2 {
+        margin-bottom: 55px;
+        font-size: 52px;
+        line-height: 52px;
+      }
+    }
+
+    .footer-banner-links {
+      flex-wrap: wrap;
+      margin-bottom: 0;
+
+      li {
+        width: 100%;
+        padding: 20px 0;
+
+        a {
+          font-size: 23px;
+          line-height: 28px;
+        }
+
+        &:not(:last-of-type) {
+          border-bottom: 1px solid $--color-grey-2;
+        }
+
+        &:nth-of-type(1) {
+          padding-top: 0;
+        }
+
+        &:last-of-type {
+          padding-bottom: 0;
+        }
+
+        &:nth-of-type(2) {
+          border-left: 0;
+          border-right: 0;
+        }
       }
     }
   }
