--- a/source/scss/components/_page-banner.scss
+++ b/source/scss/components/_page-banner.scss
@@ -15,6 +15,7 @@
     align-items: flex-end;
     justify-content: flex-start;
     position: relative;
+    background-image: url(../img/no-image.png);
 
     .h2 {
       z-index: 1;
@@ -31,6 +32,7 @@
       left: 0;
       width: 100%;
       height: inherit;
+      background-image: url(../img/no-image.png);
 
       img, iframe, video {
         object-fit: cover;
