--- a/source/scss/layout/_footer.scss
+++ b/source/scss/layout/_footer.scss
@@ -29,7 +29,7 @@ footer.footer-main {
       font-size: 16px;
       font-weight: 300;
       line-height: 19px;
-      color: $--color-white;
+      color: $--color-grey-2;
 
       &:last-of-type {
         margin-bottom: 0;
