--- a/source/scss/layout/_header.scss
+++ b/source/scss/layout/_header.scss
@@ -266,10 +266,42 @@ header.header-main {
 
     li:has(.full-menu-btn) {
       margin-right: 25px;
+      position: relative;
     }
 
-    li + li {
-      margin-left: 40px;
+    .search-item-menu {
+      position: relative;
+      margin-left: 0;
+
+      a {
+
+        &:after {
+          content: "";
+          display: block;
+          width: 24px;
+          height: 24px;
+          background-image: url(../img/icons/search-ico.svg);
+          background-repeat: no-repeat;
+          background-position: center;
+          background-size: 24px;
+          position: absolute;
+          transition: 0.3s;
+          right: -34px;
+          top: -4px;
+        }
+
+        &:hover {
+
+          &:after {
+            background-image: url(../img/icons/search-ico-red.svg);
+          }
+        }
+      }
+    }
+
+
+    li + .menu-item-has-children {
+      margin-right: 35px;
     }
 
     .menu-item-has-children {
@@ -277,22 +309,23 @@ header.header-main {
       &:after {
         content: "";
         display: block;
-        border: solid #231f20;
-        border-width: 0 2px 2px 0;
-        padding: 3px;
-        transform: rotate(45deg);
         transition: .3s;
+        background-repeat: no-repeat;
+        background-position: center;
+        background-size: 12px;
+        width: 12px;
+        height: 12px;
+        background-image: url(../img/icons/menu-arrow-black.svg);
         position: absolute;
         right: -16px;
-        top: 20%;
+        top: 3px;
       }
 
       &:hover {
 
         &:after {
-          transform: rotate(225deg);
-          margin-top: 3px;
-          border-color: $--color-red;
+          transform: scale(-1);
+          background-image: url(../img/icons/menu-arrow-red.svg);
         }
       }
     }
@@ -312,13 +345,15 @@ header.header-main {
   }
 
   #header-modal-menu-btn {
-    display: flex;
-    align-items: center;
     cursor: pointer;
+    padding-left: 38px;
 
     &:before {
       content: "";
       display: block;
+      position: absolute;
+      left: 0;
+      top: 3px;
       width: 25px;
       height: 9px;
       background-repeat: no-repeat;
@@ -335,6 +370,7 @@ header.header-main {
       background-image: url(../img/icons/header-modal-close.svg);
       width: 25px;
       height: 25px;
+      top: -4px;
     }
   }
 
@@ -568,7 +604,7 @@ header.header-main {
 
       li {
 
-        &:nth-of-type(2), &:nth-of-type(3) {
+        &:nth-of-type(3), &:nth-of-type(4) {
           display: none;
         }
       }
@@ -598,10 +634,17 @@ header.header-main {
         .header-column {
 
           &:nth-of-type(1) {
-            width: 66%;
+            width: 85%;
+
+            .left-menu {
+              display: flex;
+              width: 100%;
+              justify-content: space-between;
+            }
           }
           &:nth-of-type(2) {
-            width: 22%;
+            width: 15%;
+            justify-content: flex-end;
           }
           &:nth-of-type(3) {
             width: 10%;
@@ -801,10 +844,10 @@ header.header-main {
         .header-column {
 
           &:nth-of-type(1) {
-            width: initial;
+            width: 70%;
           }
           &:nth-of-type(2) {
-            width: initial;
+            width: 30%;
           }
           &:nth-of-type(3) {
             width: initial;
@@ -871,7 +914,7 @@ header.header-main {
     }
 
 
-      .main-menu {
+    .main-menu {
 
       > li:nth-of-type(4) {
         display: none;
